// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilterStatusForItem correct filterStatus for item: {"id":0,"price":250,"numberOfPeople":1,"activity":["swimming","tennis"]} 1`] = `
Object {
  "pass": true,
}
`;

exports[`getFilterStatusForItem correct filterStatus for item: {"id":1,"price":1000,"numberOfPeople":2,"activity":["football","swimming","tennis","golfing"]} 1`] = `
Object {
  "pass": true,
}
`;

exports[`getFilterStatusForItem correct filterStatus for item: {"id":2,"price":20,"numberOfPeople":5,"activity":["swimming","tennis"]} 1`] = `
Object {
  "filterGroupRejected": "0",
  "pass": false,
}
`;

exports[`getFilterStatusForItem correct filterStatus for item: {"id":3,"price":1000,"numberOfPeople":1,"activity":["football","golfing"]} 1`] = `
Object {
  "filterGroupRejected": "3",
  "pass": false,
}
`;

exports[`getFilterStatusForItem correct filterStatus for item: {"id":4,"price":10,"numberOfPeople":2,"activity":["football"]} 1`] = `
Object {
  "pass": false,
}
`;
